server/public/styles/style.css
#tags{
  background-color: #c7ebdf;
  padding:5px;
  margin: 10px;
}

#tags:hover{
  background-color: #45BD95;
 
}

#ind-tag{
  color: #5c5c5c;
  font-size: 9px;
  -webkit-font-smoothing: antialiased;
}

#ind-tag:hover{
  text-decoration:none;
  color:white;
}

hr {
  border: 0;
  clear:both;
  display:block;
  width: 80%;               
  background-color:#f1f1f1;
  height: .5px;
}

#logo-container{
  height: 40px;
  width:40px;
  margin-top:-8px;
}

#image-container{
  height: 20px;
  width: 20px;
}

img {
  max-width: 100%;
  max-height: 100%;
}

#searchBar{
  width: 100%;
  height: 80%;
}

#searchBar::-moz-placeholder{
  font-size: 10px;
}

#searchBar::-webkit-input-placeholder{
  font-size: 10px;
}

.header_link{
  font-size: 12px;
}

.header{
  background-color: #f6f6f6;
  padding-top: 10px;
  height:40px;
  border-bottom:3px ridge lightgray;
  position: fixed; 
  top: 0;
  padding-bottom: 30px;
  opacity: 0%;
  z-index: 5;
}

#askQuestionButton{
  margin-top: 70px;
  background-color: #5c5c5c;
  color: white;
  right: 55px;
}

#askQuestionButton:hover{
  background-color: #45BD95;
}

#askQuestionButtonReplacement{
  margin-top: 85px;
  right: 55px;
}

#smallerText{
  font-size: 10px;
  vertical-align: text-top;
}

.header_link:hover .header_link:focus .header_link:active{
  color: #999;
  text-decoration: none;
}

.header_link{
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
  text-decoration: none;
  transition: color 0.1s, background-color 0.1s;
}

.header_link{
  letter-spacing: 1px;
  transition: color 0.1s,background-color 0.1s,padding 0.2s ease-in;
  color: #000;
}

.header_link::before{
  content: '';
  display: block;
  position: absolute;
  bottom: 3px;
  left: 0; 
  height: 3px;
  align-content: center;
  background-color:#45BD95;
  transform-origin: right top;
  transform: scale(0, 1);
  transition: color 0.1s,transform 0.2s ease-out;
  text-decoration: none;
}

.questions_link::before{
  width: 92%;
}

.tags_link::before{
  width: 60%;
}

.header_link:active::before{
  background-color: #000;
  text-decoration: none;
}

.header_link:hover::before, .header_link:focus::before {
  transform-origin: left top;
  transform: scale(1, 1);
  text-decoration: none;
}

.header_link:hover, .header_link:visited, .header_link:link, .header_link:active{
    text-decoration: none;
}

.header_link:hover{
  color: #45BD95;
}

#small_header_link{
  font-size: 10px;
  color: black;
}

#small_header_link:hover{
  text-decoration: underline;
  color: #45BD95;
}

#profile_pic:hover{
  border-style: solid;
  border-color: #45BD95;
  border-width: 1px;
  object-fit: cover;
}

.page-title{
  margin-top: -30px;
  left:40px;
}

#card-text{
  font-size: 8px;
  text-align:center;
  position: relative;
  z-index: 2;
}

.card-title{
  text-align: center;
}

.card{
  left: 40px;
  position: relative;
  z-index: 1;
}

#card{
  background-color: #f1f1f1;
  padding:0px;
  position: relative;
  z-index: 1;
}

#questions{
  margin-left: -40px;
  text-decoration: underline;
  color:#3f3f3f;
}

#questions:hover{
  color:#45BD95;
}

#date{
  font-size: 10px;
  bottom: -45px;
}

#tag-page-text{
  left: 40px;
}

#allTags{
  left:30px;
  margin-top: 20px;
}

#newQuestion{
  transform: translateX(30px);
}

#newQuestionInput{
  margin-top: 10px;
}

#tagInput{
  left: -12px;
  top:10px;
}

#newQuestionTags{
  top: 20px;
  transform: translateX(30px);
}

#askButton{
  margin-top: 20px;
  background-color: #5c5c5c;
  color: white;
  right: 55px;
}

#askButton:hover{
  background-color: #45BD95;
}
/* 
text-angular{
  height: 50%;
} */

#profile_img_url{
  height: 200px;
  width: 200px;
  margin-left:40px;
  border-style: ridge;
  border-color: #45BD95;
  border-width: 1px;
  object-fit: cover;
}

#hi{
  font-size: 20px;
  font-weight: bold;
}

#change-pic-btn{
  position: relative;
  left: 25px;
  width: 200px;
  height: 30px;
  top: -30px;
  opacity: 0.8;
  background-color:#4c4c4c;
  color: white;
}

#change-pic-btn:hover{
  opacity: 0.9;
  background-color:#3d3d3d;
}

#profile-hr{
  margin-left: 25px;
  margin-bottom: 20px;
}

#profile-title{
  margin-left: 25px;
  margin-top: 20px;
}

#profile-questions-answers{
  margin-left:40px;
  color: gray;
}

#page-down{
  margin-top: 100px;
}

#no-results{
  top: 10px;
}

#removeBtn{
  float:left;
  margin-left:-70px;
  margin-top: -80px;
}

#removeBtn:hover{
  color: white;
  background-color: red;
}

#ind-question-date{
  margin-left: 38px;
  font-size: 10px;
}

#postedBy{
  font-size: 10px;
  display: inline-block;
}

#ind-question-title{
  margin-top: -30px;
  left:40px;
}

#bottom-hr{
  margin-top:-10px;
  margin-bottom: 30px;
}

#arrow-up{
  height: 20px;
  width: 20px;
  transform: translateY(10px);
}

#arrow-down{
  height: 20px;
  width: 20px;
  transform: translateY(-10px);
}

#num-of-votes{
  text-align: center;
  /* transform: translateX(20px); */
}

#deleteBtn{
  font-size: 10px;
  transform: translateX(-20px);
}

.answer-date{
  transform: translateX(10px);
  transform: translateY(20px);
}

#answer-image{
  transform: translateX(100px);
  transform: translateY(20px);
  object-fit: cover;
  height: 15px;
  width: 15px;
}

#answer-image:hover{
  transform: scale(13);
  z-index: 4;
  position: relative;
}

#question-profile-img{
  object-fit: cover;
  height: 15px;
  width: 15px;
}

#question-profile-img:hover{
  transform: scale(13);
  z-index: 4;
  position: relative;
}

.answer-by{
  transform: translateX(100px);
  transform: translateY(20px);
}

#tags-in-question{
  transform: translateX(-50px);
}

.answer-hr{
  transform: translateY(20px);
}

#new-answer-title{
  margin-top: 20px;
  transform: translateX(25px);
  margin-bottom:15px;
  transform: translateX(40px);
}

.post-answer-btn{
  background-color: #5c5c5c;
  color: white;
  transform: translateX(20px);
  margin-top: 10px;
}

.post-answer-btn:hover{
  background-color: #3d3d3d;
  color: white;
}

.login-container{
  background-color: #93DEC3;
  width: 300px;
  height:300px;
  border:8px ridge #45BD95;
  padding: 20px;
  text-align: center;
  transform: translateX(40px);
}

.log-in{
  color:#3d3d3d;
}

.register-btn{
  color: #3d3d3d;
  margin-right:5px;
}

.login-btn{
  background-color: #3d3d3d;
  color: white;
  margin-left:5px;
}

.login-btn:hover{
  background-color: grey;
}

.register-container{
  background-color: #93DEC3;
  width: 300px;
  height:400px;
  border:8px ridge #45BD95;
  padding: 20px;
  text-align: center;
  transform: translateX(40px);
}

#login-alert{
  font-size: 10px;
  margin: -10px;
  margin-top:10px;
}

#resolveBtn{
  font-size: 10px;
  color: #45BD95;
}

#editBtn{
  font-size: 10px;
  display: block;
  margin-top: -5px;
}

#answer-title{
  margin-top: -30px;
  transform: translateX(40px);
}

#add-tag-btn{
  background-color: #5c5c5c;
  color: white;
  transform:translateX(55px);
}

#new-tag-input{
  transform:translateX(55px);
}

#cancel-new-tag-btn{
  font-size: 10px;
}

#add-new-tag-btn{
  background-color: #5c5c5c;
  color: white;
  margin-left: 70px;
}

#check-img{
  transform: translateX(-42px);
}

#check-img-ind-question{
  position: relative;
  transform: translateX(107px);
}

#removeBtn{
  transform: translateX(20px);
}

#no-answers{
  transform: translateX(160px);
  margin-top: 20px;
  margin-bottom: 30px;
}

#pagination-controls *{
  color: black;
  /* right: 0px; */
  margin-left:5px;
  margin-top: 10px;
  transform: translateX(65px);
}

#pagination-controls{
  background-color: #f1f1f1;
  width: 100%;
}

#upload-photo-btn{
  /* transform: translateY(63px); */

}

#upload-photo-move{
  transform: translateX(120px);
}

#upload-photo-btn-ask{
  transform: translateX(120px);
}

#upload-move{
  transform: translateY(10px);
}

#technologies{
  text-align: center;
}

#tech-list{
  list-style-type: none;
  font-size: 20px;
  transform: translateX(-12px);
}

